service/simpleapp-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: foo
  labels:
    app: simpleapp
    app: foo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: simpleapp
  template:
    metadata:
      labels:
        app: simpleapp
    spec:
      containers:
        - name: simpleapp
          image: dgkanatsios/simpleapp:latest
          ports:
            - containerPort: 8080
