service/tmp-busybox.yml
---
apiVersion: v1
kind: Pod
metadata:
  name: tmp-busybox
spec:
  containers:
    - name: busybox
      image: busybox:latest
      command: ["wget"]
      args: ["-O", "-", "http://10.96.40.29:6262"]
