service/simpleapp-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapp-service
spec:
  type: ClusterIP
  selector:
    app: simpleapp
  ports:
  - protocol: TCP
    port: 6262
    targetPort: 8080
